inpinia table vertical-align

--- a/assets/css/inspiniaStyle.css
+++ b/assets/css/inspiniaStyle.css
@@ -3523,7 +3523,7 @@ body.body-small .footer.fixed {
 /*--Ari--*/
 .table > thead > tr > th  {
   border-bottom: 1px solid #DDDDDD;
-  vertical-align: bottom;
+  vertical-align: center;
   background-color: #107dac;
   
   color: white;
