--- a/assets/css/inspiniaStyle.css
+++ b/assets/css/inspiniaStyle.css
@@ -1585,7 +1585,7 @@ table.dataTable thead .sorting_desc,
 table.dataTable thead .sorting_asc_disabled,
 table.dataTable thead .sorting_desc_disabled {
   background: #005b96;
-  vertical-align: center;
+  vertical-align: middle;
 }
 /*------*/
 .dataTables_wrapper {
