--- a/assets/css/inspiniaStyle.css
+++ b/assets/css/inspiniaStyle.css
@@ -3536,7 +3536,7 @@ body.body-small .footer.fixed {
   border-bottom: 1px solid #DDDDDD;
   vertical-align: middle;
  
-    background:#0191c8;
+    background:#2e7bb3;
   color: white;
   text-align: center;
 }
