--- a/assets/css/inspiniaStyle.css
+++ b/assets/css/inspiniaStyle.css
@@ -4067,6 +4067,67 @@ body.deep-blue-bg-color.mini-navbar .nav-second-level{
 .deep-blue-bg-color{
   background-color: #384f5f;
 }
+/* BACKGROUND TABLE */
+body.cyan-bg-color .table > thead{
+  background-color: #005a66;
+}
+body.blue-bg-color .table > thead{
+  background-color: #0e3f66;
+}
+body.light-blue-bg-color .table > thead{
+  background-color: #014666;
+}
+body.yellow-bg-color .table > thead{
+  background-color: #665e17;
+}
+body.pink-bg-color .table > thead{
+  background-color: #660d2b;
+}
+body.purple-bg-color .table > thead{
+  background-color: #5a1666;
+}
+body.deep-purple-bg-color .table > thead{
+  background-color: #3a2166;
+}
+body.red-bg-color .table > thead{
+  background-color: #661b15;
+}
+body.black-bg-color .table > thead{
+  background-color: #262626;
+}
+body.indigo-bg-color .table > thead{
+  background-color: #242e66;
+}
+body.teal-bg-color .table > thead{
+  background-color: #00665c;
+}
+body.green-bg-color .table > thead{
+  background-color: #2c662e;
+}
+body.light-green-bg-color .table > thead{
+  background-color: #486627;
+}
+body.lime-bg-color .table > thead{
+  background-color: #5e661b;
+}
+body.amber-bg-color .table > thead{
+  background-color: #664d03;
+}
+body.orange-bg-color .table > thead{
+  background-color: #663d00;
+}
+body.deep-orange-bg-color .table > thead{
+  background-color: #66220d;
+}
+body.brown-bg-color .table > thead{
+  background-color: #66483d;
+}
+body.blue-grey-bg-color .table > thead{
+  background-color: #465b66;
+}
+body.deep-blue-bg-color.table > thead{
+  background-color: #384f5f;
+}
 /* BACKGROUNDS */
 .gray-bg {
   background-color: #f3f3f4;
