--- a/assets/css/inspiniaStyle.css
+++ b/assets/css/inspiniaStyle.css
@@ -3526,6 +3526,7 @@ body.body-small .footer.fixed {
 .table-bordered > thead > tr > td {
   /*background-color: #F5F5F6;*/
   border-bottom-width: 1px;
+  color: white;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > tbody > tr > th,
